API level 35 upgraded

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,12 +1,12 @@
  
 
-<ion-content [fullscreen]="true" class="container">
-  <div class="car-movement">
+<ion-content [fullscreen]="true" class="container" >
+  <!-- <div class="car-movement">
     <div class="car">🚕</div>
     <div class="bike">🏍️ </div>
     <div class="Tractor">🚜 </div>
     <div class="car2">🚗 </div>
-  </div>
+  </div> -->
 
 
   <div class="card-grid container">
