--- a/src/app/pages/fuel-cost-calculator/fuel-cost-calculator.page.html
+++ b/src/app/pages/fuel-cost-calculator/fuel-cost-calculator.page.html
@@ -1,5 +1,5 @@
  
-<ion-content>
+<!-- <ion-content> -->
   <div class="container2">
  
     <div class="common-title">
@@ -73,4 +73,4 @@
  
 
  
-</ion-content>
+<!-- </ion-content> -->
