--- a/src/global.scss
+++ b/src/global.scss
@@ -35,6 +35,16 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+// :root {
+//   ion-app {
+//     // Apply safe area padding to the entire app
+//     padding-top: var(--ion-safe-area-top);
+//     padding-left: var(--ion-safe-area-left);
+//     padding-right: var(--ion-safe-area-right);
+//     padding-bottom: var(--ion-safe-area-bottom);
+//     // Don't add bottom padding here - we'll handle it per component
+//   }
+// }
 html {
   font-size: calc(100% + 0.5vw);
 }
@@ -45,8 +55,14 @@ body {
   --ion-color-dark-contrast-rgb: 255, 255, 255;
   --ion-color-dark-shade: #1e2023;
   --ion-color-dark-tint: #383a3e;
+      // Prefer manually defined safe area variables on Android
+      --ion-safe-area-top: var(--android-safe-area-top, env(safe-area-inset-top));
+      --ion-safe-area-left: var(--android-safe-area-left, env(safe-area-inset-left));
+      --ion-safe-area-right: var(--android-safe-area-right, env(safe-area-inset-right));
+      --ion-safe-area-bottom: var(--android-safe-area-bottom, env(safe-area-inset-bottom));
   // background: -webkit-linear-gradient(90deg, hsla(208, 67%, 81%, 1) 0%, hsla(37, 65%, 85%, 1) 50%, hsla(301, 65%, 83%, 1) 100%);
   }
+
 html, body, ion-app, ion-content {
   --background: background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 460 40'%3E%3Cg fill='none' fill-rule='evenodd' stroke='%23fff' stroke-width='5' opacity='.1'%3E%3Cpath d='M-345 28s57.5-10 115-10 115 10 115 10S-57.5 38 0 38s115-10 115-10 57.5-10 115-10 115 10 115 10 57.5 10 115 10 115-10 115-10'/%3E%3Cpath d='M-345 14s57.5-10 115-10 115 10 115 10S-57.5 28 0 28s115-10 115-10 57.5-10 115-10 115 10 115 10 57.5 10 115 10 115-10 115-10m-920 22s57.5-10 115-10 115 10 115 10S-57.5 46 0 46s115-10 115-10 57.5-10 115-10 115 10 115 10 57.5 10 115 10 115-10 115-10'/%3E%3C/g%3E%3C/svg%3E%0A"),
   linear-gradient(80deg, #202, #006);
@@ -55,6 +71,7 @@ html, body, ion-app, ion-content {
     background-size: 50vw auto, 100% 100%;
     // background-size: cover;
     // background-repeat: no-repeat;
+   
 }
 
   .tabbar {
@@ -365,7 +382,7 @@ ion-header {
   flex: 1;
   padding-top: 60px;
   background: linear-gradient(100deg, #402, #006);
-  padding: 75px 20px;
+  padding: 100px 20px;
   /* margin: 0px 1px; */
   display: flex;
   flex-direction: column;
@@ -383,7 +400,7 @@ ion-header {
   flex: 1; /* Takes up remaining space */
   padding-top: 60px; /* Enough to clear the fixed header */
   background: linear-gradient(100deg, #402, #006);
-  padding: 75px 20px;
+  padding: 100px 20px;
   // height: -webkit-fill-available;
   display: flex;
   flex-direction: column;
