update add content

--- a/src/app/pages/fuel-cost-calculator/fuel-cost-calculator.page.scss
+++ b/src/app/pages/fuel-cost-calculator/fuel-cost-calculator.page.scss
@@ -3,7 +3,7 @@ ion-card ion-card-header {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 8px;
+    padding: 5px;
 }
 
 ion-card ion-card-title {
@@ -22,7 +22,7 @@ ion-card {
 //     // text-align: center;
 //     padding-top: 20px;
 // }
-.custom-gap {
-    padding-bottom: 7px;
-}
- 
+// .custom-gap {
+//     padding-bottom: 7px;
+// }
+
