--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -69,8 +69,9 @@
     <ion-card (click)="goToTractorFuelCalculator()" *ngIf="selectedFuel === 'DIESEL'" [style.height.px]="cardHeight">
       <ion-card-header>
         <ion-card-title class="center-content">
-          <img src="../../../assets/icon/fuel icon/tractor.png" alt="Fuel Icon" class="icon-left">
+          <img src="../../../assets/icon/fuel icon/jcb.png" style="height: 85px;" alt="Fuel Icon" class="icon-left">
           {{ 'TRACTOR_FUEL_CALCULATOR' | translate }}
+          <img src="../../../assets/icon/fuel icon/tractor.png" alt="Fuel Icon" class="icon-left">
         </ion-card-title>
       </ion-card-header>
     </ion-card>
