--- a/src/app/pages/tractor-fuel-calculator/tractor-fuel-calculator.page.html
+++ b/src/app/pages/tractor-fuel-calculator/tractor-fuel-calculator.page.html
@@ -1,7 +1,7 @@
 <ion-content>
   <div class="container3">
     <div class="common-title">
-      <ion-title>{{ 'TRACTOR_FUEL_COST_CALCULATION' | translate }}</ion-title>
+      <ion-title style="font-size: 23px">{{ 'TRACTOR_FUEL_COST_CALCULATION' | translate }}</ion-title>
     </div>
 
     <div class="custom-gap"></div>
