add save btn in all

--- a/src/app/auth-page/user-login/user-login.page.html
+++ b/src/app/auth-page/user-login/user-login.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar class="custom-header-toolbar">
-    <ion-title class="title">Fuel Calculator</ion-title>
+    <ion-title class="title">Fuel Mitra</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="translationService.changeLanguage()">
         <img height="35px" src="../../../assets/icon/fuel icon/languages.png" />
