--- a/src/app/layout/tabs/tabs.page.html
+++ b/src/app/layout/tabs/tabs.page.html
@@ -6,7 +6,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
 
-    <ion-title>Fuel Calculator</ion-title>
+    <ion-title>Fuel Mitra</ion-title>
 
     <ion-buttons slot="end">
     
