--- a/src/app/pages/jcb-fuel-calculator/jcb-fuel-cost/jcb-fuel-cost.page.html
+++ b/src/app/pages/jcb-fuel-calculator/jcb-fuel-cost/jcb-fuel-cost.page.html
@@ -51,5 +51,9 @@
         </ion-item-divider>
       </ion-card-content>
     </ion-card>
+
+    <ion-button *ngIf="totalCost !== null" class="custome-button custom-gap" (click)="saveRecord()">
+      {{ 'SAVE' | translate }}
+    </ion-button>
   </div>
 </ion-content>
