--- a/src/app/pages/privacy-policy/privacy-policy.page.html
+++ b/src/app/pages/privacy-policy/privacy-policy.page.html
@@ -9,7 +9,7 @@
 
 <ion-content class="privacy-policy-content">
   <div class="privacy-policy-container">
-    <h2 class="title">Fuel Calculator App</h2>
+    <h2 class="title">Fuel Mitra App</h2>
 
     <div class="section">
       <h3 class="subtitle">1. Information We Collect</h3>
