--- a/src/app/pages/fuel-quantity-price/fuel-quantity-price.page.html
+++ b/src/app/pages/fuel-quantity-price/fuel-quantity-price.page.html
@@ -33,5 +33,10 @@
         </ion-item-divider>
       </ion-card-content>
     </ion-card>
+
+    <ion-button *ngIf="totalCost !== null" class="custome-button custom-gap" (click)="saveRecord()">
+      {{ 'SAVE' | translate }}
+    </ion-button>
+
   </div>
 </ion-content>
