--- a/src/app/pages/mini-tractor-fuel-calculator/mini-tractor-fera-cost/mini-tractor-fera-cost.page.html
+++ b/src/app/pages/mini-tractor-fuel-calculator/mini-tractor-fera-cost/mini-tractor-fera-cost.page.html
@@ -16,19 +16,19 @@
     <div class="custom-gap"></div>
 
     <div class="input-group">
-      <label class="input-group__label">{{ 'DISTANCE_KM' | translate }}</label>
+      <label class="input-group__label">{{ '1_FERA_COST' | translate }}</label>
       <input type="number" class="input-group__input" [(ngModel)]="distanceKm" />
     </div>
 
     <div class="input-group">
-      <label class="input-group__label">{{ 'COST_PER_KM' | translate }}</label>
+      <label class="input-group__label">{{ 'PER_FERA_COST' | translate }}</label>
       <input type="number" class="input-group__input" [(ngModel)]="costPerKm" />
     </div>
 
-    <div class="input-group">
+    <!-- <div class="input-group">
       <label class="input-group__label">{{ 'ADDITIONAL_CHARGES' | translate }}</label>
       <input type="number" class="input-group__input" [(ngModel)]="additionalCharges" placeholder="0" />
-    </div>
+    </div> -->
 
     <ion-button class="custome-button" (click)="calculateFeraCost()">
       {{ 'CALCULATE' | translate }}
@@ -40,16 +40,20 @@
         <ion-card-title>{{ 'RESULT' | translate }}</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        {{ 'DISTANCE_KM' | translate }}: {{ distanceKm | number:'1.2-2' }}
+        {{ '1_FERA_COST' | translate }}: {{ distanceKm | number:'1.2-2' }}
         <br>
-        {{ 'COST_PER_KM' | translate }}: {{ costPerKm | number:'1.2-2' }}
+        {{ 'PER_FERA_COST' | translate }}: {{ costPerKm | number:'1.2-2' }}
         <br>
-        {{ 'ADDITIONAL_CHARGES' | translate }}: {{ additionalCharges || 0 | number:'1.2-2' }}
-        <br>
+        <!-- {{ 'ADDITIONAL_CHARGES' | translate }}: {{ additionalCharges || 0 | number:'1.2-2' }}
+        <br> -->
         <ion-item-divider color="warning">
-          {{ 'TOTAL_COST' | translate }}: {{ totalCost | number:'1.2-2' }}
+          {{ 'TOTAL_FERA_COST' | translate }}: {{ totalCost | number:'1.2-2' }}
         </ion-item-divider>
       </ion-card-content>
     </ion-card>
+
+    <ion-button *ngIf="totalCost !== null" class="custome-button custom-gap" (click)="saveRecord()">
+      {{ 'SAVE' | translate }}
+    </ion-button>
   </div>
 </ion-content>
