--- a/src/app/pages/tractor-fuel-calculator/tractor-fera-cost/tractor-fera-cost.page.html
+++ b/src/app/pages/tractor-fuel-calculator/tractor-fera-cost/tractor-fera-cost.page.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="input-group">
-      <label class="input-group__label">{{ 'TOTAL_FERA' | translate }}</label>
+      <label class="input-group__label">{{ 'PER_FERA_COST' | translate }}</label>
       <input type="number" class="input-group__input" [(ngModel)]="costPerKm" />
     </div>
 
@@ -35,15 +35,19 @@
         <ion-card-title>{{ 'RESULT' | translate }}</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        {{ 'DISTANCE_KM' | translate }}: {{ distanceKm | number:'1.2-2' }}
+        {{ '1_FERA_COST' | translate }}: {{ distanceKm | number:'1.2-2' }}
         <br>
-        {{ 'COST_PER_KM' | translate }}: {{ costPerKm | number:'1.2-2' }}
+        {{ 'PER_FERA_COST' | translate }}: {{ costPerKm | number:'1.2-2' }}
         <br>
-      
+
         <ion-item-divider color="warning">
-          {{ 'TOTAL_COST' | translate }}: {{ totalCost | number:'1.2-2' }}
+          {{ 'TOTAL_FERA_COST' | translate }}: {{ totalCost | number:'1.2-2' }}
         </ion-item-divider>
       </ion-card-content>
     </ion-card>
+
+    <ion-button *ngIf="totalCost !== null" class="custome-button custom-gap" (click)="saveRecord()">
+      {{ 'SAVE' | translate }}
+    </ion-button>
   </div>
 </ion-content>
