--- a/src/app/pages/history/history.page.html
+++ b/src/app/pages/history/history.page.html
@@ -45,7 +45,7 @@
       <ion-card class="category-card jcb-card" (click)="goToJCBHistory()">
         <ion-card-content class="category-content">
           <div class="category-icon">
-            <img src="../../../assets/icon/fuel icon/JCB1.Png" style="height: 45px;" alt="Fuel Icon" class="icon-left">
+            <img src="../../../assets/icon/fuel icon/JCB1.Png" style="height: 45px; width: 45px" alt="Fuel Icon" class="icon-left">
           </div>
           <div class="category-info">
             <h3>JCB Record</h3>
