--- a/src/app/pages/fuel-cost-calculator/fuel-cost-calculator.page.scss
+++ b/src/app/pages/fuel-cost-calculator/fuel-cost-calculator.page.scss
@@ -56,7 +56,7 @@ ion-card.custom-gap {
 // Responsive Design for Small Screens
 @media (max-width: 480px) {
     .container2 {
-        padding: 80px 15px 20px;
+        padding: calc(var(--ion-safe-area-top, 0) + 80px) 15px calc(var(--ion-safe-area-bottom, 0) + 20px);
     }
 
     .common-title ion-title {
