--- a/src/app/pages/tractor-fuel-calculator/tractor-fuel-calculator.page.scss
+++ b/src/app/pages/tractor-fuel-calculator/tractor-fuel-calculator.page.scss
@@ -52,7 +52,7 @@ ion-card {
 // Responsive Design for Small Screens
 @media (max-width: 480px) {
   .container {
-    padding: 80px 15px 20px;
+    padding: calc(var(--ion-safe-area-top, 0) + 80px) 15px calc(var(--ion-safe-area-bottom, 0) + 20px);
   }
 
   .common-title ion-title {
