--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -18,6 +18,7 @@
         <ion-card-title class="center-content">
           <img src="../../../assets/icon/fuel icon/car.png" alt="Fuel Icon" class="icon-left">
           {{ 'CALCULATE_FUEL_COST' | translate }}
+          <img src="../../../assets/icon/fuel icon/bike.png" alt="Fuel Icon" class="icon-left">
         </ion-card-title>
       </ion-card-header>
     </ion-card>
