--- a/src/app/pages/history/history.page.html
+++ b/src/app/pages/history/history.page.html
@@ -6,10 +6,10 @@
       <ion-card class="category-card car-card" (click)="goToCarHistory()">
         <ion-card-content class="category-content">
           <div class="category-icon">
-            <img src="../../../assets/icon/fuel icon/car.png" alt="Car" />
+            <img src="../../../assets/icon/fuel icon/car.png" alt="Car" />  
           </div>
           <div class="category-info">
-            <h3>Car Record</h3>
+            <h3>Car & Bike Record</h3>
             <p class="record-count">{{ getRecordCount('CAR') }} records</p>
           </div>
         </ion-card-content>
